Updated navbar toggle icon color and menu background for mobile view

--- a/about.html
+++ b/about.html
@@ -66,15 +66,17 @@
                     <div class="col-md-6">
                         <p class="lead mt-5" style="line-height: 2;"><span
                                 style="font-size: larger; color: yellow;">Hello!</span> I'm Shajahan, a passionate and
-                            experienced video editor, graphics
-                            designer, and VFX artist with a keen eye for crafting visually captivating experiences.
-                            Proficient in the Adobe Creative Suite and other advanced editing tools, I specialize in
-                            motion graphics, color grading, and compositing. My goal is to consistently deliver
-                            high-quality work that not only meets but exceeds client expectations.
+                            experienced video editor, graphics designer, and VFX artist with a keen eye for crafting
+                            visually captivating experiences. Proficient in the Adobe Creative Suite and other advanced
+                            editing tools, I specialize in motion graphics, color grading, and compositing. My goal is
+                            to consistently deliver high-quality work that not only meets but exceeds client
+                            expectations.
 
-                            With extensive freelance experience, I've collaborated with multiple wedding film companies,
-                            production studios, and media houses. Currently, I am focused on ad video editing, bringing
-                            creativity, technical expertise, and a commitment to excellence to every project.</p>
+                            With a Diploma in Media & Visual Effects from Digital Curve VFX & Designing Academy,
+                            Manjeri, and extensive freelance experience, I've collaborated with multiple wedding film
+                            companies, production studios, and media houses. Currently, I am focused on ad video
+                            editing, bringing creativity, technical expertise, and a commitment to excellence to every
+                            project.</p>
                         <!-- end:col -->
                     </div>
                     <hr class="mt-5">
@@ -88,21 +90,24 @@
                 <div class="col-lg-auto mt-4">
                 </div>
                 <div class="col-lg-3 mt-4 ml-auto">
-                   <p> <i class="fa-solid fa-location-dot" style="margin-right: 10px;"></i>Smc.Media <br> <span style="margin: 20px;">Perinthalmanna</span>
-                        <br> <span style="margin-left: 20px;">Kerala India</span> 
+                    <p> <i class="fa-solid fa-location-dot" style="margin-right: 10px;"></i>Shajahan.pk <br> <span
+                            style="margin: 20px;">Perinthalmanna</span>
+                        <br> <span style="margin-left: 20px;">Kerala India</span>
                     </p>
                 </div>
                 <div class="col-lg-3 mt-4 ml-auto">
                     <ul class="list-unstyled footer-link">
-                        <li><a href="https://www.instagram.com/shaju.arcl?igsh=ZjFnZnNqMXVmZjF1" target="_blank"><i class="fa-brands fa-instagram" style="margin-right: 10px;"></i>Instagram</a></li>
+                        <li><a href="https://www.instagram.com/shaju.arcl?igsh=ZjFnZnNqMXVmZjF1" target="_blank"><i
+                                    class="fa-brands fa-instagram" style="margin-right: 10px;"></i>Instagram</a></li>
                         <li><a href="https://wa.me/917994703405?text=Hello%20there!" target="_blank">
-                            <i class="fa-brands fa-whatsapp" style="margin-right: 10px;"></i>WhatsApp
-                          </a></li>
-                        <li><a href="mailto:shajahanarcl@gmail.com" target="_blank"><i class="fa-regular fa-envelope" style="margin-right: 10px;"></i>Gmail</a></li>
-                        
+                                <i class="fa-brands fa-whatsapp" style="margin-right: 10px;"></i>WhatsApp
+                            </a></li>
+                        <li><a href="mailto:shajahanarcl@gmail.com" target="_blank"><i class="fa-regular fa-envelope"
+                                    style="margin-right: 10px;"></i>Gmail</a></li>
+
                     </ul>
                 </div>
-                
+
             </div>
             <!--/.row-->
         </div>
