--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description"
         content="Free minimal portfolio web site template,minmal portfolio,porfolio,bootstrap template,html template,photography " />
-    <title>SMC MEDIA</title>
+    <title>SJ FILMS</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -147,7 +147,18 @@
                         </a>
                     </div>
                     <!-- end:entry -->
-
+                    <div class="entry work-entry">
+                        <a href="https://www.youtube.com/watch?v=sEwibDngeYs" target="_blank"
+                            class="video-thumbnail">
+                            <div class="entry-image imageBG"
+                                data-img="./assets/img/photo-1484755560615-a4c64e778a6c.jpg">
+                                <img src="./assets/img/isl.jpg" alt="Video Thumbnail"
+                                    style="width: 100%; height: 100%;">
+                                <div class="play-button-overlay"></div>
+                            </div>
+                        </a>
+                    </div>
+                    
                     <!-- /end:portfolio -->
         </section>
     </main>
