--- a/project.html
+++ b/project.html
@@ -59,6 +59,17 @@
                             </a>
                         </div>
                         <div class="entry work-entry">
+                            <a href="https://www.youtube.com/watch?v=sEwibDngeYs" target="_blank"
+                                class="video-thumbnail">
+                                <div class="entry-image imageBG"
+                                    data-img="./assets/img/photo-1484755560615-a4c64e778a6c.jpg">
+                                    <img src="./assets/img/isl.jpg" alt="Video Thumbnail"
+                                        style="width: 100%; height: 100%;">
+                                    <div class="play-button-overlay"></div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="entry work-entry">
                             <a href="https://youtu.be/eRpEqNYrWGg?si=CN3kkiWoqzMM2-tR" target="_blank" class="video-thumbnail">
                                 <div class="entry-image imageBG" data-img="./assets/img/photo-1484755560615-a4c64e778a6c.jpg">
                                     <img src="./assets/img/thumbnail3.jpg" alt="Video Thumbnail" style="width: 100%; height: 100%;">
