--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                         </a>
                     </div>
                     <div class="entry work-entry">
-                        <a href="https://youtu.be/eRpEqNYrWGg?si=CN3kkiWoqzMM2-tR" target="_blank"
+                        <a href="https://www.instagram.com/reel/DF1-RESpMpB/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank"
                             class="video-thumbnail">
                             <div class="entry-image imageBG"
                                 data-img="./assets/img/photo-1484755560615-a4c64e778a6c.jpg">
-                                <img src="./assets/img/thumbnail3.jpg" alt="Video Thumbnail"
+                                <img src="./assets/img/girl.png" alt="Video Thumbnail"
                                     style="width: 100%; height: 100%;">
                                 <div class="play-button-overlay"></div>
                             </div>
@@ -112,7 +112,17 @@
                         </a>
                     </div>
 
-
+                    <div class="entry work-entry">
+                        <a href="https://youtu.be/eRpEqNYrWGg?si=CN3kkiWoqzMM2-tR" target="_blank"
+                            class="video-thumbnail">
+                            <div class="entry-image imageBG"
+                                data-img="./assets/img/photo-1484755560615-a4c64e778a6c.jpg">
+                                <img src="./assets/img/thumbnail3.jpg" alt="Video Thumbnail"
+                                    style="width: 100%; height: 100%;">
+                                <div class="play-button-overlay"></div>
+                            </div>
+                        </a>
+                    </div>
 
                     <!-- end:entry -->
                     <div class="entry work-entry">
